objects/Marketing_Community__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this Community be included in reports?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_groups_can_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other groups can Read?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Process_Type__c</fullName>
        <defaultValue>'Direct offer'</defaultValue>
        <label>Default Sales Process Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct offer</fullName>
                </value>
                <value>
                    <fullName>Lot reservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <label>Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Available</fullName>
                    <default>true</default>
                    <label>Not Yet Available</label>
                </value>
                <value>
                    <fullName>Coming Soon</fullName>
                </value>
                <value>
                    <fullName>Grand Opening</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Marketing Communities</relationshipLabel>
        <relationshipName>Marketing_Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiteCoreID__c</fullName>
        <externalId>true</externalId>
        <label>SiteCoreID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Ontario</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Link__c</fullName>
        <label>Web Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <description>SiteCore/CMS "marketing community"</description>
    <label>Marketing Community</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Communities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Process_Type__c</columns>
        <columns>Sales_office__c</columns>
        <columns>Active__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>SiteCoreID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>